docs/pages/versions/v53.0.0/index.mdx
import React, { useState, useEffect } from 'react';
import { View, Text, TextInput, Button, FlatList, TouchableOpacity } from 'react-native';
import { initializeApp } from 'firebase/app';
import { getFirestore, collection, addDoc, onSnapshot } from 'firebase/firestore';
import { getAuth, signInAnonymously } from 'firebase/auth';
import Constants from 'expo-constants';

const firebaseConfig = {
  apiKey: "AIzaSyCIexP7uKFi9b4FFJTB9x5gpEqt59GgtDA",
  authDomain: "budaweb-5e771.firebaseapp.com",
  projectId: "budaweb-5e771",
  storageBucket: "budaweb-5e771.firebasestorage.app",
  messagingSenderId: "928936919127",
  appId: "1:928936919127:web:279d2674b67f1cbfe9a312"
};

initializeApp(firebaseConfig);
const db = getFirestore();
const auth = getAuth();

export default function App() {
  const [message, setMessage] = useState('');
  const [messages, setMessages] = useState([]);

  useEffect(() => {
    signInAnonymously(auth).then(() => {
      const unsub = onSnapshot(collection(db, 'messages'), snap => {
        setMessages(snap.docs.map(d => ({ id: d.id, ...d.data() })));
      });
      return () => unsub();
    });
  }, []);

  const sendMessage = () => {
    if (message.trim()) {
      addDoc(collection(db, 'messages'), {
        text: message,
        createdAt: new Date().toISOString()
      });
      setMessage('');
    }
  };

  return (
    <View style={{ paddingTop: Constants.statusBarHeight, flex: 1, padding: 20 }}>
      <Text style={{ fontSize: 22, fontWeight: 'bold', marginBottom: 10 }}>BUDA Kingdom Chat</Text>
      <FlatList
        data={messages}
        keyExtractor={i => i.id}
        renderItem={({ item }) => <Text style={{ backgroundColor: '#eee', padding: 8, marginBottom: 4, borderRadius: 5 }}>{item.text}</Text>}
      />
      <View style={{ flexDirection: 'row', marginTop: 10 }}>
        <TextInput
          value={message}
          onChangeText={setMessage}
          placeholder="Andika ujumbe"
          style={{ flex: 1, borderWidth: 1, padding: 10, borderRadius: 5 }}
        />
        <TouchableOpacity onPress={sendMessage} style={{ marginLeft: 10, backgroundColor: '#333', padding: 12, borderRadius: 5 }}>
          <Text style={{ color: '#fff' }}>Tuma</Text>
        </TouchableOpacity>
      </View>
    </View>
  );
}
title: Reference
hideTOC: true
---

import { BookOpen02Icon } from '@expo/styleguide-icons/outline/BookOpen02Icon';

import { BoxLink } from '~/ui/components/BoxLink';
import { Collapsible } from '~/ui/components/Collapsible';
import RedirectNotification from '~/ui/components/RedirectNotification';
import {
  AndroidIOSCompatibilityTable,
  ReactNativeCompatibilityTable,
} from '~/ui/components/SDKTables';
import { Terminal } from '~/ui/components/Snippet';
import { CODE } from '~/ui/components/Text';

<RedirectNotification>
  The page you are looking for does not exist in this SDK version. It may have been deprecated or
  added to a newer SDK version.
</RedirectNotification>

The Expo SDK provides access to device and system functionality such as contacts, camera, gyroscope, GPS location, and so on, in the form of packages. You can install any Expo SDK package using the `npx expo install` command. For example, three different packages are installed using the following command:

<Terminal cmd={['$ npx expo install expo-camera expo-contacts expo-sensors']} />

After installing one or more packages, you can import them into your JavaScript code:

```js
import { CameraView } from 'expo-camera';
import * as Contacts from 'expo-contacts';
import { Gyroscope } from 'expo-sensors';
```

This allows you to write [`Contacts.getContactsAsync()`](./sdk/contacts#contactsgetcontactsasynccontactquery) and read the contacts from the device, read the gyroscope sensor to detect device movement, or start the phone's camera and take photos.

## All Expo SDK packages work in any React Native app

Expo apps are React Native apps, so all Expo SDK packages work in any React Native app with the `expo` package installed and configured. The easiest way to create a React Native app with support for Expo SDK packages is to use `create-expo-app`. However, you can also add Expo SDK support to an existing React Native app with the `npx install-expo-modules` command.

<Terminal
  cmd={['# Create a project named my-app', '$ npx create-expo-app my-app --template bare-minimum']}
  cmdCopy="npx create-expo-app my-app --template bare-minimum"
/>

<BoxLink
  title="Install Expo SDK packages in existing React Native apps"
  href="/bare/installing-expo-modules"
  description={
    <>
      Learn more about configuring projects created with{' '}
      <CODE>npx @react-native-community/cli@latest init</CODE> to Expo SDK packages.
    </>
  }
  Icon={BookOpen02Icon}
/>

<BoxLink
  title="Use libraries"
  description="Learn how to install Expo SDK packages in your project."
  href="/workflow/using-libraries"
  Icon={BookOpen02Icon}
/>

## Using pre-release versions

New Expo SDK versions are released three times each year. Between these releases, we publish pre-release versions of the `expo` package and all of the Expo SDK packages. Pre-releases are not considered stable and should only be used if you are comfortable with the risk of encountering bugs or other issues.

### Canary releases

Canary releases represent a snapshot of the state of the `main` branch at the time they are published. Canary package versions include `-canary` in the name, along with the date and commit hash, such as `51.0.0-canary-20240418-8d74597`. To install the latest canary release:

<Terminal
  cmd={[
    '# Install the alpha version of expo and its related packages',
    '$ npm install expo@canary && npx expo install --fix',
  ]}
  cmdCopy="npm install expo@canary && npx expo install --fix"
/>

You can often use pre-release versions of individual packages with stable releases of the Expo SDK. There may occasionally be incompatibilities or other issues that arise in canary-quality releases. You may want to [silence dependency validation warnings](/more/expo-cli/#configuring-dependency-validation) if you opt in to the canary package and once you have verified that it works well for your use cases.

### Beta releases

Before each Expo SDK release, we publish beta versions of the `expo` package and all of the Expo SDK packages. Beta releases are considered much more stable than canary releases, and we encourage developers to try them out on their apps and share their feedback. Beta releases use the `beta` tag on npm and follow the instructions in the related [changelog](https://expo.dev/changelog) post.

## Each Expo SDK version depends on a React Native version

<ReactNativeCompatibilityTable />

### Additional information

<Collapsible summary="Expo SDK policy for tracking React Native releases">

- Expo SDK versions are released three times each year, and each Expo SDK release targets a single React Native version. This is typically the latest stable version at the time of the release.
- The release cadence of React Native has varied over its history and it is currently on pace for six releases in 2025. While on this cadence, you can expect that there will be an Expo SDK version for every second React Native release.
- Pre-release versions of the upcoming Expo SDK will include support for the latest version of React Native quickly, usually the same day it is released. A member of the Expo SDK team works on the React Native releases team for each release, and is responsible for continuously updating the React Native version in the Expo repository, verifying compatibility, and reporting regressions back to the team at Meta.

</Collapsible>

<Collapsible summary=" Why not release a new Expo SDK version immediately for every React Native release?">

At Expo, we have found that releasing three major version provides a good balance of stability and innovation for developers depending on our open source tools. Expo and Meta work closely together on releases, and we will keep improving our processes to get the latest Expo and React Native features to you as quickly as possible.

</Collapsible>

<Collapsible summary="What if I need a change from the latest React Native version and it's not yet in an Expo SDK release?"
>
We work closely with the team at Meta to ensure that any urgent fixes are included in the React Native version used by the latest Expo SDK. If your issue won't be cherrypicked into an existing release because it is more niche, or it involves a breaking change, then you have two options:

1. Use [`patch-package`](https://github.com/ds300/patch-package) to pull in the fix.
2. Use a [pre-release version of the Expo SDK](#using-pre-release-versions). An ([example](https://expo.dev/changelog/react-native-78)).

</Collapsible>

<Collapsible summary="Can I use an older version of React Native with the latest Expo SDK?">

Packages in the Expo SDK are intended to support the target React Native version for that SDK. Typically, they will not support older versions of React Native, but they may. When a new version of React Native is released, the latest versions of the Expo SDK packages are typically updated to support it. However, this may take weeks or more, depending on the extent of the changes in the release.

</Collapsible>

## Support for Android and iOS versions

Each version of Expo SDK supports a minimum OS version of Android and iOS. For Android, the `compileSdkVersion` is defined which tells the [Gradle](https://developer.android.com/studio/build) which Android SDK version to use to compile the app. This also means that you can use the Android API features included in that SDK version and from the previous versions. For iOS, the [Xcode](https://developer.apple.com/news/upcoming-requirements/) tells the minimum Xcode SDK version to use to compile the app.

<AndroidIOSCompatibilityTable startVersion="53.0.0" endVersion="51.0.0" />

When deciding whether to upgrade your Expo SDK version, consider both Expo's SDK version and app store submission requirements, as described in the above table. Google Play Store and Apple App Store periodically increase their minimum required OS versions and API levels, which are required for new app submissions. Expo has no control over the app store requirements, and you should check [Google](https://developer.android.com/studio/build) and [Apple](https://developer.apple.com/news/upcoming-requirements/) for the current store submission requirements.
